# undergroundBeats

./: # Underground Beats app.md  .gitignore  .roomodes  BUILD_GUIDE.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  IMPLEMENTATION_STATUS.md  LICENSE  README 10.36.45 AM.md  README.md  SUCCESS.md  build.sh  development_plan.md  docs  juce_setup_plan.md  make_build.sh  masterplan.md  readme.md  rebuild.sh  recommendations.md  run.sh  setup_juce.sh  underground-beats-documentation.md  undergroundBeats_design_doc.md
.cursor/rules/: cxalloy-coding-standards.mdc  patricks_standard_rules.mdc
.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
documentation/: audio-engine.md  effects-processing.md  overview.md  sequencer.md  synthesis-engine.md  user-interface.md
include/: JuceConfig.h.in  JuceHeader.h
include/undergroundBeats/: JuceHeader.h  JuceIncludes.h  UndergroundBeatsProcessor.h  juce_module_paths.h
include/undergroundBeats/audio/: AudioComponentProcessor.h  AudioEngine.h  AudioSourceSeparator.h  SamplePlayer.h
include/undergroundBeats/audio/file/: AudioFile.h
include/undergroundBeats/core/: Application.h  UndergroundBeatsController.h
include/undergroundBeats/gui/: AudioFileFilter.h  CompressorPanelComponent.h  EQPanelComponent.h  EffectIconBarComponent.h  EffectPanelComponent.h  MainComponent.h  MainEditor.h  SampleBrowserComponent.h  SampleLoaderComponent.h  SidebarComponent.h  StemControlPanel.h  StyleTransferPanelComponent.h  TimelineRulerComponent.h  TopBarComponent.h  TransportControls.h  VariationExplorerComponent.h  WaveformDisplay.h
include/undergroundBeats/gui/panels/: ChorusPanelComponent.h  CompressorPanelComponent.h  DelayPanelComponent.h  EQPanelComponent.h  JuceHeader.h  ReverbPanelComponent.h  SaturationPanelComponent.h  StyleTransferPanelComponent.h  VariationExplorerComponent.h
include/undergroundBeats/ml/: AudioSourceSeparator.h  GANVariationGenerator.h  ONNXModelLoader.h  ONNXSourceSeparator.h  StyleTransfer.h  VariationGenerator.h
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
scripts/: clean_cmake.sh
src/: Main.cpp  MainComponent.cpp  MainComponent.h  UndergroundBeatsProcessor.cpp
src/audio/: AudioComponentProcessor.cpp  AudioEngine.cpp  AudioSourceSeparator.cpp  SamplePlayer.cpp
src/audio-engine/: AudioDeviceManager.cpp  AudioDeviceManager.h  AudioEngine.cpp  AudioEngine.h  Engine.cpp  Engine.h  ProcessorGraph.cpp  ProcessorGraph.h  ProcessorNode.cpp  ProcessorNode.h
src/audio/file/: AudioFile.cpp
src/core/: Application.cpp  UndergroundBeatsController.cpp  main.cpp
src/effects/: Delay.cpp  Delay.h  Effect.cpp  Effect.h  EffectsChain.cpp  EffectsChain.h  Reverb.cpp  Reverb.h
src/gui/: CompressorPanelComponent.cpp  EQPanelComponent.cpp  EffectPanelComponent.cpp  MainComponent.cpp  MainEditor.cpp  SampleBrowserComponent.cpp  SampleLoaderComponent.cpp  SidebarComponent.cpp  StemControlPanel.cpp  StyleTransferPanelComponent.cpp  TopBarComponent.cpp  TransportControls.cpp  VariationExplorerComponent.cpp  WaveformDisplay.cpp
src/gui/panels/: CompressorPanelComponent.cpp  EQPanelComponent.cpp  StyleTransferPanelComponent.cpp  VariationExplorerComponent.cpp
src/ml/: AudioSourceSeparator.cpp  GANVariationGenerator.cpp  ONNXModelLoader.cpp  ONNXModelLoader.h  ONNXSourceSeparator.cpp  ONNXSourceSeparator.h  VariationGenerator.cpp
src/project/: ProjectManager.cpp  ProjectManager.h  ProjectState.cpp  ProjectState.h
src/sequencer/: MidiEngine.cpp  MidiEngine.h  Pattern.cpp  Pattern.h  Sequencer.cpp  Sequencer.h  Timeline.cpp  Timeline.h
src/synthesis/: Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  Oscillator.cpp  Oscillator.h  SynthModule.cpp  SynthModule.h
src/ui/: AppComponent.cpp  AppComponent.h
src/ui/components/: MixerChannel.cpp  MixerChannel.h  PatternControlPanel.cpp  PatternControlPanel.h  PatternEditor.cpp  PatternEditor.h
src/ui/components/synth/: EnvelopePanel.cpp  EnvelopePanel.h  FilterPanel.h  OscillatorPanel.cpp  OscillatorPanel.h
src/ui/views/: MixerView.cpp  MixerView.h  PatternEditorView.cpp  PatternEditorView.h
src/utils/: AudioMath.h  Concurrency.h
test/: CMakeLists.txt
test/audio/: AudioComponentProcessorTest.cpp  AudioEngineTest.cpp  AudioSourceSeparatorTest.cpp
test/core/: UndergroundBeatsControllerTest.cpp  UndergroundBeatsProcessorTest.cpp
test/ml/: ONNXSourceSeparatorTest.cpp  VariationGeneratorTest.cpp
